--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,27 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>cucumber-java-listener</artifactId>
     <groupId>io.orangebeard</groupId>
+    <artifactId>cucumber-java-listener</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
+    <url>https://github.com/orangebeard-io/cucumber-java-listener</url>
+    <name>Orangebeard.io Cucumber Java Listener</name>
+    <description>Send Cucumber Java test results to an Orangebeard.io instance</description>
+
+
+    <developers>
+        <developer>
+            <name>Maarten-Jan van Gool</name>
+            <email>maarten-jan@orangebeard.io</email>
+            <organizationUrl>https://orangebeard.io</organizationUrl>
+        </developer>
+    </developers>
+
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.release>11</maven.compiler.release>
+        <java.version>1.11</java.version>
         <cucumber.version>7.0.0</cucumber.version>
     </properties>
 
@@ -38,19 +54,6 @@
                 <configuration>
                     <release>11</release>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>3.1.1</version>
-                <executions>
-                    <execution>
-                        <id>getClasspathFilenames</id>
-                        <goals>
-                            <goal>properties</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
