--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -44,12 +44,12 @@ jobs:
         run: mvn clean -P github-release -DskipTests deploy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#      - name: Create changelog text
-#        id: changelog
-#        uses: loopwerk/tag-changelog@v1
-#        with:
-#          token: ${{ secrets.GITHUB_TOKEN }}
-#          exclude_types: other,doc,chore
+      - name: Create changelog text
+        id: changelog
+        uses: loopwerk/tag-changelog@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          exclude_types: other,doc,chore
       - name: Create Release
         id: createRelease
         uses: actions/create-release@v1
@@ -58,7 +58,7 @@ jobs:
         with:
           tag_name: ${{ steps.get-version.outputs.version }}
           release_name: "Release Orangebeard Cucumber Java Listener ${{ steps.get-version.outputs.version }}"
-          body: ""#${{ steps.changelog.outputs.changes }}
+          body: "${{ steps.changelog.outputs.changes }}"
           draft: false
           prerelease: false
   update-version:
