--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,8 @@
         <maven.compiler.release>11</maven.compiler.release>
         <java.version>1.11</java.version>
         <cucumber.version>7.0.0</cucumber.version>
+        <mockito.version>4.2.0</mockito.version>
+        <assertj.version>3.21.0</assertj.version>
     </properties>
 
     <scm>
@@ -37,7 +39,7 @@
         <dependency>
             <groupId>io.orangebeard</groupId>
             <artifactId>java-client</artifactId>
-            <version>1.1.11</version>
+            <version>1.1.18</version>
         </dependency>
         <dependency>
             <groupId>io.cucumber</groupId>
@@ -50,12 +52,6 @@
             <version>${cucumber.version}</version>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13.1</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
             <version>RELEASE</version>
@@ -64,22 +60,15 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
-            <version>4.2.0</version>
+            <version>${mockito.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>3.21.0</version>
+            <version>${assertj.version}</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-inline</artifactId>
-            <version>4.2.0</version>
-            <scope>test</scope>
-        </dependency>
-
     </dependencies>
 
     <build>
