--- a/pom.xml
+++ b/pom.xml
@@ -23,10 +23,12 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>11</maven.compiler.release>
         <java.version>1.11</java.version>
-        <cucumber.version>7.0.0</cucumber.version>
+        <cucumber.version>7.2.3</cucumber.version>
+        <java-client.version>1.2.1</java-client.version>
+
+        <!-- for test -->
         <mockito.version>4.2.0</mockito.version>
         <assertj.version>3.21.0</assertj.version>
-        <java-client.version>1.2.1</java-client.version>
     </properties>
 
     <scm>
@@ -44,14 +46,11 @@
         </dependency>
         <dependency>
             <groupId>io.cucumber</groupId>
-            <artifactId>cucumber-java</artifactId>
+            <artifactId>cucumber-plugin</artifactId>
             <version>${cucumber.version}</version>
         </dependency>
-        <dependency>
-            <groupId>io.cucumber</groupId>
-            <artifactId>cucumber-junit-platform-engine</artifactId>
-            <version>${cucumber.version}</version>
-        </dependency>
+
+        <!-- for test -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
